chore: overall improvements
